--- a/texttop/index.html
+++ b/texttop/index.html
@@ -91,31 +91,54 @@
             </div>
         </div>
         <article id="explanation">
-            <div class="text" data-sphere="Загалом">
-                <p>Впровадження заходів з енергоефективності скоротить сукупне споживання ресурсів на <span class="vde"><strong>42%</strong></span>. </p>
-                <p>Здійснивши енергетичний перехід ми будемо отримувати <span class="vde"><strong>91%</strong></span> енергії з відновлюваних джерел.</p>
+            <div class="text_cont" data-sphere="Загалом">
+                <div class="text">
+                    <p>Впровадження заходів з енергоефективності скоротить сукупне споживання ресурсів на <span class="vde"><strong>42%</strong></span>. </p>
+                    <p>Здійснивши енергетичний перехід ми будемо отримувати <span class="vde"><strong>91%</strong></span> енергії з відновлюваних джерел.</p>
+                </div>
+                <div class="blank_for_scroll"></div>
             </div>
-            <div class="text" data-sphere="Населення">
-                <h4>Населення</h4>
-                <ul><li class=""><i class="fas fa-check"></i> Термомодернізація житлових будинків</li><li><i class="fas fa-check"></i> Модернізація систем енергозабезпечення об’єктів ЖКГ</li><li><i class="fas fa-check"></i> Автоматизовані індивідуальні теплові пункти (ІТП)</li><li><i class="fas fa-check"></i> Впровадження когенераційних систем для багатоповерхових будинків</li><li><i class="fas fa-check"></i> Техніка А++, А+++</li><li><i class="fas fa-check"></i> 40-50% населення використовує сонячні панелі на дахах будинків</li><li class=""><i class="fas fa-check"></i> Опалення та гаряча вода за рахунок біопалива та відходів, централізованого ВДЕ-тепла та використання сонячних колекторів</li></ul>
+            <div class="text_cont" data-sphere="Населення">
+                <div class="blank_for_scroll"></div>
+                <div class="text">
+                    <h4>Населення</h4>
+                    <ul><li class=""><i class="fas fa-check"></i> Термомодернізація житлових будинків</li><li><i class="fas fa-check"></i> Модернізація систем енергозабезпечення об’єктів ЖКГ</li><li><i class="fas fa-check"></i> Автоматизовані індивідуальні теплові пункти (ІТП)</li><li><i class="fas fa-check"></i> Впровадження когенераційних систем для багатоповерхових будинків</li><li><i class="fas fa-check"></i> Техніка А++, А+++</li><li><i class="fas fa-check"></i> 40-50% населення використовує сонячні панелі на дахах будинків</li><li class=""><i class="fas fa-check"></i> Опалення та гаряча вода за рахунок біопалива та відходів, централізованого ВДЕ-тепла та використання сонячних колекторів</li></ul>
+                </div>
+                <div class="blank_for_scroll"></div>
             </div>
-            <div class="text" data-sphere="Промисловість">
-                <h4>Промисловість</h4>
-                <ul><li class=""><i class="fas fa-check"></i> 88% - енергія з відновлюваних джерел та альтернативних видів палива</li><li><i class="fas fa-check"></i> Електрифікація промисловості</li><li><i class="fas fa-check"></i> Заміна енергоємного обладнання на нове та ефективне</li><li><i class="fas fa-check"></i> Більші інвестиції з боку промислових виробників, зокрема електроенергетичної галузі</li></ul>
+            <div class="text_cont" data-sphere="Промисловість">
+                <div class="blank_for_scroll"></div>
+                <div class="text">
+                    <h4>Промисловість</h4>
+                    <ul><li class=""><i class="fas fa-check"></i> 88% - енергія з відновлюваних джерел та альтернативних видів палива</li><li><i class="fas fa-check"></i> Електрифікація промисловості</li><li><i class="fas fa-check"></i> Заміна енергоємного обладнання на нове та ефективне</li><li><i class="fas fa-check"></i> Більші інвестиції з боку промислових виробників, зокрема електроенергетичної галузі</li></ul>
+                </div>
+                <div class="blank_for_scroll"></div>
             </div>
-            <div class="text" data-sphere="Сфера послуг">
-                <h4>Сфера послуг</h4>
-                <ul><li class=""><i class="fas fa-check"></i> ВДЕ 88%</li><li><i class="fas fa-check"></i> Заходи з енергоефективності та енергозаощадження</li><li><i class="fas fa-check"></i> Термоізоляція приміщень</li><li><i class="fas fa-check"></i> Використання високоефективних технічних приладів (А++, А+++)</li></ul>
+            <div class="text_cont" data-sphere="Сфера послуг">
+                <div class="blank_for_scroll"></div>
+                <div class="text">
+                    <h4>Сфера послуг</h4>
+                    <ul><li class=""><i class="fas fa-check"></i> ВДЕ 88%</li><li><i class="fas fa-check"></i> Заходи з енергоефективності та енергозаощадження</li><li><i class="fas fa-check"></i> Термоізоляція приміщень</li><li><i class="fas fa-check"></i> Використання високоефективних технічних приладів (А++, А+++)</li></ul>
+                </div>
+                <div class="blank_for_scroll"></div>
             </div>
-            <div class="text" data-sphere="Сільське господарство">
-                <h4>Сільське господарство</h4>
-                <ul><li class=""><i class="fas fa-check"></i> Використання ВДЕ для виробництва електроенергії та тепла</li><li><i class="fas fa-check"></i> СГ Транспорт на біопаливі</li><li><i class="fas fa-check"></i> Вирощування енергетичних культур</li><li><i class="fas fa-check"></i> Нові технології використання сільськогосподарських машин та механізмів</li></ul>
+            <div class="text_cont" data-sphere="Сільське господарство">
+                <div class="blank_for_scroll"></div>
+                <div class="text">
+                    <h4>Сільське господарство</h4>
+                    <ul><li class=""><i class="fas fa-check"></i> Використання ВДЕ для виробництва електроенергії та тепла</li><li><i class="fas fa-check"></i> СГ Транспорт на біопаливі</li><li><i class="fas fa-check"></i> Вирощування енергетичних культур</li><li><i class="fas fa-check"></i> Нові технології використання сільськогосподарських машин та механізмів</li></ul>
+                </div>
+                <div class="blank_for_scroll"></div>
             </div>
-            <div class="text" data-sphere="Транспорт">
-                <h4>Транспорт</h4>
-                <ul><li class=""><i class="fas fa-check"></i> Легкові авто: 90% електромобілі, 10% на біопаливі</li><li><i class="fas fa-check"></i> Електроавтобуси та електропотяги</li><li><i class="fas fa-check"></i> Авіаційний, водний, вантажний транспорт на біопаливі</li></ul>
+            <div class="text_cont" data-sphere="Транспорт">
+                <div class="blank_for_scroll"></div>
+                <div class="text">
+                    <h4>Транспорт</h4>
+                    <ul><li class=""><i class="fas fa-check"></i> Легкові авто: 90% електромобілі, 10% на біопаливі</li><li><i class="fas fa-check"></i> Електроавтобуси та електропотяги</li><li><i class="fas fa-check"></i> Авіаційний, водний, вантажний транспорт на біопаливі</li></ul>
+                </div>
+                <div class="blank_for_scroll"></div>
             </div>
-            <div class="text" id="phantom" style="opacity: 0; margin: 0"></div>
+            <div class="text_cont" id="phantom" style="opacity: 0; margin: 0"></div>
         </article>
     </section>
     <section id="costs">
