--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
     <section id="consumption">
         <div class="fig_container">
             <div class="h3">
-                <h3>Як зміниться споживання ресурсів: <span id="h3_sphere">загалом</span></h3>
-                <p><a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a> сценарій<br/><em>тис. тон нафтового еквіваленту (н.е.)</em></p>
+                <h3>Як зміниться споживання ресурсів</h3>
+                <p>Сценарій: <a class="switch_scenario active" role="button">Революційний</a><a class="switch_scenario" role="button">Базовий</a></p>
+                <p><em>тис. тон нафтового еквіваленту (н.е.)</em></p>
+                <p><span id="h3_sphere">загалом</span><span id="bar_year">2015</span></p>
             </div>
             <figure>
                 <div class="chart" id="lines"></div>
-                <div class="chart" id="bars">
-                    <p id="bar_year">2015</p>
-                </div>
+                <div class="chart" id="bars"></div>
             </figure>
             <div class="data_caption">
                 <p>Дані: Дослідження <a href="https://ua.boell.org/sites/default/files/perehid_ukraini_na_vidnovlyuvanu_energetiku_do_2050_roku.pdf" target="_blank">"Перехід України на відновлювану енергетику до 2050 року"</a></p>
@@ -101,7 +101,7 @@
             <div class="text_cont" data-sphere="Населення">
                 <div class="blank_for_scroll"></div>
                 <div class="text">
-                    <h4>Населення</h4>
+                    <h4>Населення<span class="about_rev"> - заходи за революційним сценарієм</span></h4>
                     <ul><li class=""><i class="fas fa-check"></i> Термомодернізація житлових будинків</li><li><i class="fas fa-check"></i> Модернізація систем енергозабезпечення об’єктів ЖКГ</li><li><i class="fas fa-check"></i> Автоматизовані індивідуальні теплові пункти (ІТП)</li><li><i class="fas fa-check"></i> Впровадження когенераційних систем для багатоповерхових будинків</li><li><i class="fas fa-check"></i> Техніка А++, А+++</li><li><i class="fas fa-check"></i> 40-50% населення використовує сонячні панелі на дахах будинків</li><li class=""><i class="fas fa-check"></i> Опалення та гаряча вода за рахунок біопалива та відходів, централізованого ВДЕ-тепла та використання сонячних колекторів</li></ul>
                 </div>
                 <div class="blank_for_scroll"></div>
@@ -109,7 +109,7 @@
             <div class="text_cont" data-sphere="Промисловість">
                 <div class="blank_for_scroll"></div>
                 <div class="text">
-                    <h4>Промисловість</h4>
+                    <h4>Промисловість<span class="about_rev"> - заходи за революційним сценарієм</span></h4>
                     <ul><li class=""><i class="fas fa-check"></i> 88% - енергія з відновлюваних джерел та альтернативних видів палива</li><li><i class="fas fa-check"></i> Електрифікація промисловості</li><li><i class="fas fa-check"></i> Заміна енергоємного обладнання на нове та ефективне</li><li><i class="fas fa-check"></i> Більші інвестиції з боку промислових виробників, зокрема електроенергетичної галузі</li></ul>
                 </div>
                 <div class="blank_for_scroll"></div>
@@ -117,7 +117,7 @@
             <div class="text_cont" data-sphere="Сфера послуг">
                 <div class="blank_for_scroll"></div>
                 <div class="text">
-                    <h4>Сфера послуг</h4>
+                    <h4>Сфера послуг<span class="about_rev"> - заходи за революційним сценарієм</span></h4>
                     <ul><li class=""><i class="fas fa-check"></i> ВДЕ 88%</li><li><i class="fas fa-check"></i> Заходи з енергоефективності та енергозаощадження</li><li><i class="fas fa-check"></i> Термоізоляція приміщень</li><li><i class="fas fa-check"></i> Використання високоефективних технічних приладів (А++, А+++)</li></ul>
                 </div>
                 <div class="blank_for_scroll"></div>
@@ -125,7 +125,7 @@
             <div class="text_cont" data-sphere="Сільське господарство">
                 <div class="blank_for_scroll"></div>
                 <div class="text">
-                    <h4>Сільське господарство</h4>
+                    <h4>Сільське господарство<span class="about_rev"> - заходи за революційним сценарієм</span></h4>
                     <ul><li class=""><i class="fas fa-check"></i> Використання ВДЕ для виробництва електроенергії та тепла</li><li><i class="fas fa-check"></i> СГ Транспорт на біопаливі</li><li><i class="fas fa-check"></i> Вирощування енергетичних культур</li><li><i class="fas fa-check"></i> Нові технології використання сільськогосподарських машин та механізмів</li></ul>
                 </div>
                 <div class="blank_for_scroll"></div>
@@ -133,7 +133,7 @@
             <div class="text_cont" data-sphere="Транспорт">
                 <div class="blank_for_scroll"></div>
                 <div class="text">
-                    <h4>Транспорт</h4>
+                    <h4>Транспорт<span class="about_rev"> - заходи за революційним сценарієм</span></h4>
                     <ul><li class=""><i class="fas fa-check"></i> Легкові авто: 90% електромобілі, 10% на біопаливі</li><li><i class="fas fa-check"></i> Електроавтобуси та електропотяги</li><li><i class="fas fa-check"></i> Авіаційний, водний, вантажний транспорт на біопаливі</li></ul>
                 </div>
                 <div class="blank_for_scroll"></div>
