--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <header>
     <h1>Енергетика майбутнього</h1>
-    <img src="img/cover.png">
+    <!--<img src="img/cover.png">-->
     <h2>
         <p class="green">Україна має технічний та економічний потенціал для переходу на відновлювані джерела енергії (ВДЕ)</p>
         <p>Дослідники Національної академії наук України підготували моделювання вигляду української енергетики в 2050 році. Ми порівнюємо 2 сценарії: базовий, який передбачає збереження динаміки 2012 року та революційний, який показує максимальне використання можливостей енергоефективних заходів та енергії з відновлюваних джерел.</p>
