--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--<img src="img/cover.png">-->
     <h2>
         <p class="green">Україна має технічний та економічний потенціал для переходу на відновлювані джерела енергії (ВДЕ)</p>
-        <p>Дослідники Національної академії наук України підготували моделювання вигляду української енергетики в 2050 році. Ми порівнюємо 2 сценарії: базовий, який передбачає збереження динаміки 2015 року та революційний, який показує максимальне використання можливостей енергоефективних заходів та енергії з відновлюваних джерел.</p>
+        <p>Дослідники Національної академії наук України підготували моделювання вигляду української енергетики в 2050 році. Ми порівнюємо 2 сценарії: базовий, який передбачає збереження динаміки 2015 року, та революційний, який показує максимальне використання можливостей енергоефективних заходів та енергії з відновлюваних джерел.</p>
         <p><span class="green">91%</span> зеленої енергетики до 2050 року можна отримати при використанні вже існуючих технологій та зменшенні споживання енергоресурсів на <span>42%</span> в порівнянні з базовим сценарієм у 2050 році.</p>
     </h2>
 </header>
