--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="text_cont" data-sphere="Загалом">
                 <div class="text">
                     <p>Енергоефективність — це важливо!</p>
-                    <p>Впровадження заходів з енергоефективності скоротить сукупне споживання ресурсів на <span class="vde"><strong>42%</strong></span> в 2050 році. </p>
+                    <p>Впровадження заходів з енергоефективності скоротить сукупне споживання енергоресурсів на <span class="vde"><strong>42%</strong></span> в 2050 році. </p>
                     <p>Здійснивши енергетичний перехід ми будемо отримувати <span class="vde"><strong>91%</strong></span> енергії з відновлюваних джерел.</p>
                 </div>
                 <div class="blank_for_scroll"></div>
@@ -131,7 +131,7 @@
                 <div class="blank_for_scroll"></div>
                 <div class="text">
                     <h4>Що має відбутися в <span class="h4_sphere">сільському господарстві</span>?</h4>
-                    <ul><li class=""><i class="fas fa-check"></i> Використання ВДЕ для виробництва електроенергії та тепла</li><li><i class="fas fa-check"></i> СГ Транспорт на біопаливі</li><li><i class="fas fa-check"></i> Вирощування енергетичних культур</li><li><i class="fas fa-check"></i> Нові технології використання сільськогосподарських машин та механізмів</li></ul>
+                    <ul><li class=""><i class="fas fa-check"></i> Використання ВДЕ для виробництва електроенергії та тепла</li><li><i class="fas fa-check"></i> Сільськогосподарський транспорт на біопаливі</li><li><i class="fas fa-check"></i> Вирощування енергетичних культур</li><li><i class="fas fa-check"></i> Нові технології використання сільськогосподарських машин та механізмів</li></ul>
                 </div>
                 <div class="blank_for_scroll"></div>
             </div>
